[gd_scene load_steps=6 format=2]

[ext_resource path="res://Obstacles/FireSpitter/FireSpitter.gd" type="Script" id=1]
[ext_resource path="res://Obstacles/FireSpitter/FireSpitter.png" type="Texture" id=2]
[ext_resource path="res://Obstacles/FireShooter/FireShooter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Obstacles/Audio/explode3.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 43.1371

[node name="FireSpitter" type="Node2D" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="Center" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." groups=[
"Enemies",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="FireShooter" parent="." instance=ExtResource( 3 )]
position = Vector2( 56.7225, -2.521 )

[node name="FireShooter2" parent="." instance=ExtResource( 3 )]
position = Vector2( -1.2605, -55.462 )

[node name="FireShooter3" parent="." instance=ExtResource( 3 )]
position = Vector2( -56.0923, -4.41174 )

[node name="FireShooter4" parent="." instance=ExtResource( 3 )]
position = Vector2( -0.404602, 52.4028 )

[node name="Flash_Timer" type="Timer" parent="."]
wait_time = 0.05

[node name="Explode_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 6.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="finished" from="Explode_SFX" to="." method="_on_Explode_SFX_finished"]
